<resources>

    <string name="app_name">Odd Jobs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="lbl_create_account">Don\'t have an account? Sign Up here.</string>


    <!--    for login and signup-->

    <style name="TextLabel" parent="TextAppearance.AppCompat">
        <item name="android:textColorHint">@color/hint_label</item>
        <item name="android:textSize">20sp</item>
        <item name="colorAccent">@android:color/black</item>
        <item name="colorControlNormal">@android:color/black</item>
        <item name="colorControlActivated">@android:color/black</item>
    </style>

    <style name="TextAppearance.App.TextInputLayout" parent="@android:style/TextAppearance">
        <item name="android:textColor">@color/hint_label</item>
        <item name="android:textSize">14sp</item>
    </style>

</resources>
